fix alignment

--- a/style.css
+++ b/style.css
@@ -90,11 +90,12 @@ nav a:hover{
 
 img {
 	width: 100%;
-    height: 80%
+    height: 100%
 }
 
 .secondHeader {
     text-align: left;
+    align-items: left;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 5%;
@@ -105,6 +106,7 @@ img {
 
 .par {
     text-align: left;
+    align-items: left;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 5%;
